summative.moria.Moria.scala.code
def Moria() {
  retourne()
  while (!estFaceMur() || estSurBiscuit()) {
    while (!estSurBiscuit && !estFaceMur) {
      avance()
    }
    if (!estSurBiscuit) {
      droite()
      avance()
      gauche()
      avance()
      break
    }
    prendBiscuit()
    while (!estSurBiscuit) {
      recule()
    }
    avance()
    poseBiscuit()
    avance()
	}
}

Moria()